<resources>
    <string name="app_name">TaintedScore</string>
    <string name="gameList">Games List</string>
    <string name="playerStats">Player Stats</string>
    <string name="actButtonAdd">Add</string>
    <string name="desc">Just image for layout</string>
    <string name="descSearch">      Search through BGG</string>
    <string name="greet">Greetings</string>
    <string name="tGames">Games: </string>
    <string name="tPlays">Plays: </string>
    <string name="fab_content_desc">Add new game</string>
    <string name="AddPlay">Add a win</string>
    <string name="AddLoss">Add a loss</string>
</resources>