<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5EC3F1"
    android:backgroundTint="#D5D8D7">

    <ImageView
        android:id="@+id/background_image2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc"
        app:layout_collapseMode="parallax"
        app:srcCompat="@drawable/back"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/gamesListButton"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:background="@color/teal_200"
            android:text="@string/gameList"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/white"
            android:colorAccent="@color/white"

            />

        <Button
            android:id="@+id/playerStatsButton"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:background="@color/teal_200"
            android:text="@string/playerStats"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gamesListButton"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="160dp"
            android:layout_height="67dp"
            android:text="@string/greet"
            android:textColor="#9E9E9E"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />

        <TextView
            android:id="@+id/textViewTotalPlays"
            android:layout_width="160dp"
            android:layout_height="67dp"
            android:text="@string/tPlays"
            android:textColor="#9E9E9E"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/gamesListButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <TextView
            android:id="@+id/textViewWinrate"
            android:layout_width="160dp"
            android:layout_height="67dp"
            android:text="@string/tGames"
            android:textColor="#9E9E9E"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/playerStatsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.397" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>